# escape_room

./: .gitignore  README.md  docker-compose.yml
.taskmaster/: config.json
.taskmaster/tasks/: tasks.json
app/: Dockerfile  package-lock.json  package.json
app/src/: App.tsx  ContentSection.tsx  ListView.tsx  MainPage.tsx  MapView.tsx  SearchBar.tsx  SearchPage.tsx
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: db.py  scheduler.py  schemas.py
backend/app/models/: __init__.py  cafe.py  cafe_theme.py  review.py  theme.py  user.py
backend/app/routers/: cafes.py  scraping.py  themes.py
backend/app/services/: pipeline.py  scraping.py
backend/sql/: schema.sql
prds/: prd.md
