[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "trio>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.29.0",
    "selenium>=4.10.0",
    "undetected-chromedriver>=2.1.1",
    "webdriver-manager>=4.0.0",
    "certifi>=2023.7.22",
    "urllib3>=1.26.20",
    "websocket-client>=1.6.1",
    "typing_extensions>=4.7.1",
    "idna>=3.4",
    "websockets>=10.4",
    "apscheduler>=3.10.0",
    "click>=8.0.0",
    "h11>=0.14.0",
    "starlette>=0.37.2",
    "pydantic==2.5.3",
    "pydantic-core==2.14.6",
    "typing-inspection>=0.4.0",
    "annotated-types>=0.6.0",
    "anyio>=3.0.0",
    "sniffio>=1.0.0",
    "tzlocal>=5.0.0",
    "geoalchemy2>=0.14.0",
    "packaging>=23.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
